src/istio_monitor/istio_control_config/gateways/online-boutique/frontend-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.istio.io/v1alpha3","kind":"Gateway","metadata":{"annotations":{},"name":"frontend-gateway","namespace":"online-boutique"},"spec":{"selector":{"istio":"ingressgateway"},"servers":[{"hosts":["*"],"port":{"name":"http","number":80,"protocol":"HTTP"}}]}}

      '
  creationTimestamp: '2025-02-12T07:39:29Z'
  generation: 3
  managedFields:
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        .: {}
        f:selector:
          .: {}
          f:istio: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: '2025-02-12T07:39:29Z'
  - apiVersion: networking.istio.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:servers: {}
    manager: kiali
    operation: Update
    time: '2025-03-19T13:58:25Z'
  name: frontend-gateway
  namespace: online-boutique
  resourceVersion: '1322150'
  uid: 76ae080b-ccba-4b60-bd4c-eaee80d74ff8
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
